--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
   <ul id="notice-list">
     <li>2025-10-29: 첫 공지사항입니다.</li>
   </ul>
+  <ul id="notice-list">
+    <li>2025-10-29: 22 공지사항입니다.</li>
+  </ul>
+  
 </body>
 </html>
