--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <ul id="notice-list">
     <li>2025-10-29: 22 공지사항입니다.</li>
   </ul>
+  <ul id="notice-list">
+    <li>세 번째 공지사항입니다.</li>
+  </ul>
+  
   
 </body>
 </html>
