--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <ul id="notice-list">
     <li>세 번째 공지사항입니다.</li>
   </ul>
+  <ul id="notice-list">
+    <li>네 번째 공지사항입니다.</li>
+  </ul>
   
   
   
