--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
     <main>
         <ul class="notice-list">
             <li>
+            <a href="./notice/post-004-NEW.html">
+                [신규] 4번!! 새로운 공지입니다!!
+            </a>
+            <span class="date">2025.10.31</span>
+            </li>
+            <li>
+            <a href="./notice/post-003.html">
+            <li>
                 <a href="./notice/post-003.html">
                     [공지] 3번 테스트 공지사항입니다.
                 </a>
