--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
     <main>
         <ul class="notice-list">
             <li>
+                <a href="./notice/post-005.html">
+                    [공지] 5번 테스트 공지사항입니다.
+                </a>
+                <span class="date">2025.10.31</span>
+            </li>
+            <li>
                 <a href="./notice/post-004.html">
                     [공지] 4번 테스트 공지사항입니다.
                 </a>
